learn-python-the-hard-way.txt
Exercise 1: A Good First Program


    >>> print "Hello World"
    Hello World
    >>> print "Hello Again!"
    Hello Again!
    >>> print "Yay! Printing"
    Yay! Printing
    >>> print "I 'd much rather you 'not'."
    I 'd much rather you 'not'.
    >>> print 'I "said" do not touch this.'
    I "said" do not touch this.
    >>> print "I "said" do not touch this."
      File "<stdin>", line 1
        print "I "said" do not touch this."
                     ^
    SyntaxError: invalid syntax
    >>> print 'I 'said' do not touch this.'
      File "<stdin>", line 1
        print 'I 'said' do not touch this.'
                     ^
    SyntaxError: invalid syntax
    >>> 


Exercise 2: Comments And Pound Characters


    >>> # comment
    ... # comment two
    ... print "I could have code like this" # add teh comment
    I could have code like this
    >>> 


Exercise 3: Numbers And Math


    I could have code like this
    >>> print "I will now count my chickens:"
    I will now count my chickens:
    >>> print "Hens", 25 + 30 /6
    Hens 30
    >>> print "Roosters", 100 - 25 * 3 % 4
    Roosters 97
    >>> print "Now I will count the eggs:"
    Now I will count the eggs:
    >>> print 3 + 2 + 1 - 5 + 4 % 2 - 1 / 4 + 6
    7
    >>> print " Is it true that 3 + 2 < 5 - 7?"
     Is it true that 3 + 2 < 5 - 7?
    >>> print 3 + 2 < 5 - 7
    False
    >>> print "What is 3 + 2?", 3 + 2
    What is 3 + 2? 5
    >>> print "What is 5 - 7?", 5 - 7
    What is 5 - 7? -2
    >>> print "Oh, that's why it's False."
    Oh, that's why it's False.
    >>> print "How about some more."
    How about some more.
    >>> print "Is it greater?", 5 > 2
    Is it greater? True
    >>> print "Is it greater or equal?", 5 >= -2
    Is it greater or equal? True
    >>> print "Is it less or equal?", 5 <= -2
    Is it less or equal? False
    >>> 
        

Exercise 4: Variables And Names

    
    >>> cars = 100
    >>> space_in_a_car = 4.0
    >>> drivers = 30
    >>> passengers = 90
    >>> cars_not_driven = cars - drivers
    >>> cars_not_driven
    70
    >>> cars_driven = drivers
    >>> cars_driven 
    30
    >>> carpool_capacity = cars_driven * space_in_a_car
    >>> carpool_capacity 
    120.0
    >>> average_passengers_per_car = passengers / cars_driven
    >>> average_passengers_per_car 
    3

    >>> print "There are", cars, "cars available."
    There are 100 cars available.
    >>> print "There are only", drivers, "drivers available."
    There are only 30 drivers available.
    >>> print "There will be", cars_not_driven, "empty cars today."
    There will be 70 empty cars today.
    >>> print "We can trasport", carpool_capacity, "people today."
    We can trasport 120.0 people today.
    >>> print "We need to put about", average_passengers_per_car, "in each car."
    We need to put about 3 in each car.
    >>> 


Exercise 5: More Variables And Printing


    >>> my_name = 'Mayza de Oliveira M.'
    >>> my_old = 21 # not a lie
    >>> my_height = 74 # inches
    >>> my_weight = 57 #lbs
    >>> my_eyes = 'Green'
    >>> my_teeth = 'White'
    >>> my_hair = 'Brown'
    >>> 
    >>> print "Let's talk about %s." % my_name
    Let's talk about Mayza de Oliveira M..
    >>> print "She's %d inches tall." % my_height
    She's 74 inches tall.
    >>> print "She's %d pounds heavy." % my_weight
    She's 57 pounds heavy.
    >>> print "Actually that's not too heavy."
    Actually that's not too heavy.
    >>> print "She's got %s eyes and %s hair." % (my_eyes, my_hair)
    She's got Green eyes and Brown hair.
    >>> print "His teeth are usually %s depending on the coffee." % my_teeth
    His teeth are usually White depending on the coffee.
    >>> 
    >>> # this line is tricky, try to get it exactly right
    ... 
    >>> print "If I add %d, %d, and %d I get %d." % (my_age, my_height, my_weight, my_age + my_height + my_weight)
    If I add 35, 74, and 57 I get 166.
    >>> 


Exercise 6: Strings And Text


    >>> x = "There are %d types of people." % 10
    >>> binary = "binary"
    >>> do_not = "dont't"
    >>> y = "Those who know %s and those who %s." % (binary, do_not)
    >>> 
    >>> print x
    There are 10 types of people.
    >>> print y
    Those who know binary and those who dont't.
    >>> 
    >>> print "I said: %r." % x
    I said: 'There are 10 types of people.'.
    >>> print "I also said: '%s'." %y
    I also said: 'Those who know binary and those who dont't.'.
    >>> print "I also said: %s." %y
    I also said: Those who know binary and those who dont't..
    >>> 
    >>> hilarious = False
    >>> joke_evaluation = "Isn't that joke so funny?! %r"
    >>> print joke_evaluation % hilarious
    Isn't that joke so funny?! False
    >>> 
    >>> w = "This is the left side of..."
    >>> e = "a string with a right side."
    >>> 
    >>> print w + e
    This is the left side of...a string with a right side.
    >>> 


Exercise 7: More Printing


    >>> print "Mary had a little lamb."
    Mary had a little lamb.
    >>> print "Its fleece was white as %s." % 'snow'
    Its fleece was white as snow.
    >>> print "And everywhere that Mary went."
    And everywhere that Mary went.
    >>> print "." * 10 # what'd that do?
    ..........
    >>> 
    >>> end1 = "C"
    >>> end2 = "h"
    >>> end3 = "e"
    >>> end4 = "e"
    >>> end5 = "s"
    >>> end6 = "e"
    >>> end7 = "B"
    >>> end8 = "u"
    >>> end9 = "r"
    >>> end10 = "g"
    >>> end11 = "e"
    >>> end12 = "r"
    >>> 
    >>> print end1 + end2 + end3 + end4 + end5 + end6,
    Cheese
    >>> print end7 + end8 + end9 + end10 + end11 + end12
    Burger
    >>> 


Exercise 8: Printing, Printing


    >>> formatter = "%r %r %r %r"
    >>> 
    >>> print formatter % (1, 2, 3, 4)
    1 2 3 4
    >>> print formatter % ("one", "two", "three", "four")
    'one' 'two' 'three' 'four'
    >>> print formatter % (True, False, False, True)
    True False False True
    >>> print formatter % (formatter, formatter, formatter, formatter)
    '%r %r %r %r' '%r %r %r %r' '%r %r %r %r' '%r %r %r %r'
    >>> print formatter % ( "I had this thing.", "That you could type up right.", "But it didn't sing.", "So I said goodnight." )
    'I had this thing.' 'That you could type up right.' "But it didn't sing." 'So I said goodnight.'
    >>> 


Exercise 9: Printing, Printing, Printing


    >>> days = "Mon Tue Wed Thu Fri Sat Sun"
    >>> months = "Jan\nFeb\nMar\nApr\nMay\nJun\nJul\nAug"
    >>> 
    >>> print "Here are the days: ", days
    Here are the days:  Mon Tue Wed Thu Fri Sat Sun
    >>> print "Here are the months: ", months
    Here are the months:  Jan
    Feb
    Mar
    Apr
    May
    Jun
    Jul
    Aug
    >>> 
    >>> print """
    ... There's something going on here.
    ... With the three double-quotes.
    ... We'll be able to type as much as we like.
    ... Even 4 lines if we want, or 5, or 6.
    ... """

    There's something going on here.
    With the three double-quotes.
    We'll be able to type as much as we like.
    Even 4 lines if we want, or 5, or 6.

    >>> 
        

Exercise 10: What Was That?


    >>> "I am 6'2\" tall." # escape double-quote inside string
    'I am 6\'2" tall.'
    >>> 'I am 6\'2" tall.' # escape single-quote inside string
    'I am 6\'2" tall.'
    >>> 
    >>> tabby_cat = "\tI'm tabbed in."
    >>> persian_cat = "I'm split\non a line."
    >>> backslash_cat = "I'm \\ a \\ cat."
    >>> 
    >>> fat_cat = """
    ... I'll do a list:
    ... \t* Cat food
    ... \t* Fishies
    ... \t* Catnip\n\t* Grass
    ... """
    >>> 
    >>> print tabby_cat
        I'm tabbed in.
    >>> print persian_cat
    I'm split
    on a line.
    >>> print backslash_cat
    I'm \ a \ cat.
    >>> print fat_cat

    I'll do a list:
        * Cat food
        * Fishies
        * Catnip
        * Grass

    >>> 


Exercise 11: Asking Questions


    >>> print "How old are you?",
    How old are you?
    >>> age = raw_input()
    21
    >>> print "How tall are you?",
    How tall are you?
    >>> height = raw_input()
    57
    >>> print "How much do you weigh?",
    How much do you weigh?
    >>> weight = raw_input()
    56
    >>> print "So, you're %r old, %r tall and %r heavy." % (age, height, weight)
    So, you're '21' old, '57' tall and '56' heavy.
    >>> 
